--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -15,7 +16,6 @@
     "json-server": "^0.15.1"
   },
   "scripts": {
-
     "start": "react-scripts start",
     "server": "json-server --watch db.json -p 3001",
     "build": "react-scripts build",
